Drivers Editor : Frame indicator/controller & cursor problem #91157

Closed
opened 2021-09-03 12:06:50 +02:00 by Terry Edhouse · 10 comments

System Information
Operating system: Linux-4.15.0-142-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.24.02

Blender Version
Broken: version: 2.83.17, branch: master, commit date: 2021-08-10 09:03, hash: 430262b133
Worked: Partially in 2.93.4

Short description of error
In the Drivers Editor moving the frame indicator/controller does not change the frame but just moves the cursor

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

1 - Start blender 2.83.17

2 - Load Factory settings

3 - Open the Drivers editor

4 - Drag the frame indicator/controller - the indicator/controller does not move, but the vertical cursor lines do.

If you have a Timeline Editor open as well, moving it's frame indicator/controller causes the one in the Drivers Editor to move in sync. This also highlights the lack of a vertical line directly under the frame indicator/controller as you have in the Timeline, Graph, Dopesheet (etc) Editors.

If when performing step 4 you also drag the mouse down and across the cursor lines move with the mouse pointer. If you go to the N sidebar and untick 'Show Cursor' only the horizontal cursor line disappears.

As an aside, I can find no way to move the cursor apart from that describe in step 4, other than by changing the Cursor X & Y values in the N sidebar.

Note that in version 2.93.4 dragging the frame indicator/controller does work as expected but there is still no vertical line directly underneath it and the issue with the cursor is the same.

**System Information** Operating system: Linux-4.15.0-142-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.24.02 **Blender Version** Broken: version: 2.83.17, branch: master, commit date: 2021-08-10 09:03, hash: `430262b133` Worked: Partially in 2.93.4 **Short description of error** In the Drivers Editor moving the frame indicator/controller does not change the frame but just moves the cursor **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] 1 - Start blender 2.83.17 2 - Load Factory settings 3 - Open the Drivers editor 4 - Drag the frame indicator/controller - the indicator/controller does not move, but the vertical cursor lines do. If you have a Timeline Editor open as well, moving it's frame indicator/controller causes the one in the Drivers Editor to move in sync. This also highlights the lack of a vertical line directly under the frame indicator/controller as you have in the Timeline, Graph, Dopesheet (etc) Editors. If when performing step 4 you also drag the mouse down and across the cursor lines move with the mouse pointer. If you go to the N sidebar and untick 'Show Cursor' only the horizontal cursor line disappears. As an aside, I can find no way to move the cursor apart from that describe in step 4, other than by changing the Cursor X & Y values in the N sidebar. Note that in version 2.93.4 dragging the frame indicator/controller does work as expected but there is still no vertical line directly underneath it and the issue with the cursor is the same.
Author

Added subscriber: @MrTez

Added subscriber: @MrTez

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'

Blender 2.83 LTS recveives only critical patches (like crashes and similar). This seems to be expected behavior in 2.93 version as cursor X position is not tied to current frame like in graph editor.

Cursor position can be also moved with mouse by holding Shift and dragging with RMB pressed.

Blender 2.83 LTS recveives only critical patches (like crashes and similar). This seems to be expected behavior in 2.93 version as cursor X position is not tied to current frame like in graph editor. Cursor position can be also moved with mouse by holding Shift and dragging with RMB pressed.
Author

Hi, while the Cursor X position isn't tied to the current frame surely there should be another vertical line directly under the frame indicator as there is on the Graph Editor and others which allow you to change the current frame.

Also, the fact that you cannot change the current frame in 2.83 LTS warrants a fix.

Hi, while the Cursor X position isn't tied to the current frame surely there should be another vertical line directly under the frame indicator as there is on the Graph Editor and others which allow you to change the current frame. Also, the fact that you cannot change the current frame in 2.83 LTS warrants a fix.

I think more realistic would be to tie cursor to current frame as it is in other editors. Not quite sure why this wasn't done. Perhaps this is because of design consideration like https://developer.blender.org/T46004

I think this is either feature request or needs design review or both. But I will ask UI team to double check this.

I think more realistic would be to tie cursor to current frame as it is in other editors. Not quite sure why this wasn't done. Perhaps this is because of design consideration like https://developer.blender.org/T46004 I think this is either feature request or needs design review or both. But I will ask UI team to double check this.

This issue was referenced by 6f29801f1b

This issue was referenced by 6f29801f1b693c5526bdb41d0c2bcf89caf5a05b

This issue was referenced by b3431a8846

This issue was referenced by b3431a88465db2433b46e1f6426c801125d0047d
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

If you go to the N sidebar and untick 'Show Cursor' only the horizontal cursor line disappears.

This is a bug I think, see D12391: Fix Drivers Editor not hiding vertical part of cursor

As for the other issue: I think the whole Editor should not show frame scrubbing whatsoever (as it was in 2.79)
The X axis here is the output of the driver, mixing this with time(frame) is probably more confusing than it has benefits.
D12392: Fix Drivers Editor showing playhead on the X Axis removes it entirely.
This way you only have the cursor, independent of time and "clean" axis representing the driver output in X and the final output in Y.

> If you go to the N sidebar and untick 'Show Cursor' only the horizontal cursor line disappears. This is a bug I think, see [D12391: Fix Drivers Editor not hiding vertical part of cursor](https://archive.blender.org/developer/D12391) As for the other issue: I think the whole Editor should not show frame scrubbing whatsoever (as it was in 2.79) The X axis here is the output of the driver, mixing this with time(frame) is probably more confusing than it has benefits. [D12392: Fix Drivers Editor showing playhead on the X Axis](https://archive.blender.org/developer/D12392) removes it entirely. This way you only have the cursor, independent of time and "clean" axis representing the driver output in X and the final output in Y.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91157
No description provided.